force-app/main/default/objects/Gift_Card_Activation__c/Gift_Card_Activation__c.object-meta.xml
<CustomObject>
    <label>Gift Card Activation</label>
    <nameField>
        <label>Gift Card Activation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Cards Activation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>