force-app/main/default/objects/Gift_Card_Activation__c/fields/Activation_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Stamp__c</fullName>
    <label>Activation Date Stamp</label>
    <type>Date</type>
</CustomField>