force-app/main/default/objects/Gift_Card_Activation__c/fields/Activation_Method__c.field-meta.xml
<CustomField>
    <fullName>Activation_Method__c</fullName>
    <label>Activation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Door Tag</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>activate.nucards.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>