force-app/main/default/objects/Gift_Card_Activation__c/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <formula>TEXT(Gift_Card_Order__r.Parent_Gift_Card_Order__r.Branch_Location__c)</formula>
    <label>Branch Location</label>
    <type>Text</type>
</CustomField>