force-app/main/default/objects/Gift_Card_Activation__c/fields/Customer_del__c.field-meta.xml
<CustomField>
    <fullName>Customer_del__c</fullName>
    <formula>Gift_Card_del__r.Opportunity__r.Account.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>