force-app/main/default/objects/Gift_Card_Activation__c/fields/fScan_Code__c.field-meta.xml
<CustomField>
    <fullName>fScan_Code__c</fullName>
    <formula>SUBSTITUTE(LEFT( Name,9), &quot; &quot;,&quot;&quot;)&amp; RIGHT(Name, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fScan Code</label>
    <type>Text</type>
</CustomField>