force-app/main/default/objects/Gift_Card_Activation__c/fields/Gift_Card_del__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Card</label>
    <referenceTo>Gift_Card__c</referenceTo>
    <relationshipLabel>Gift Cards Activation</relationshipLabel>
    <relationshipName>Gift_Cards_Activation_del</relationshipName>
    <type>Lookup</type>
</CustomField>