force-app/main/default/objects/Gift_Card_Activation__c/fields/Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Gift Cards Activation</relationshipLabel>
    <relationshipName>Gift_Cards_Activation</relationshipName>
    <type>Lookup</type>
</CustomField>