force-app/main/default/objects/Gift_Card_Activation__c/fields/Gift_Card_Order_Parent__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Order_Parent__c</fullName>
    <formula>Gift_Card_Order__r.Parent_Gift_Card_Order__r.Name</formula>
    <label>Gift Card Order Parent</label>
    <type>Text</type>
</CustomField>