force-app/main/default/objects/Gift_Card_Activation__c/fields/Opportunity_del__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_del__c</fullName>
    <formula>Gift_Card_del__r.Opportunity__r.Name</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>