force-app/main/default/objects/Gift_Card_Activation__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Cards Activation</relationshipLabel>
    <relationshipName>Gift_Cards_Activation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>