force-app/main/default/objects/Gift_Card_Activation__c/fields/Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ordered__c</fullName>
    <formula>Gift_Card_Order__r.Parent_Gift_Card_Order__r.Quantity_Ordered__c</formula>
    <label>Quantity Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>