force-app/main/default/objects/Gift_Card_Activation__c/fields/Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Scan_Code__c</fullName>
    <formula>Person_Account__r.Scan_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scan Code</label>
    <type>Text</type>
</CustomField>