force-app/main/default/objects/Gift_Card_Activation__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>Gift Cards Activation</relationshipLabel>
    <relationshipName>Gift_Cards_Activation</relationshipName>
    <type>Lookup</type>
</CustomField>